add code demo s3

--- a/assets/main.css
+++ b/assets/main.css
@@ -512,6 +512,8 @@
     .content__phone-header {
         font-size: 0.8em;
         width: 100%;
+        margin: 1em 0 ;
+        padding-left: 1em;
     }
 
     .content__header-int1,
@@ -577,6 +579,8 @@
     .content__phone-header {
         font-size: 0.8em;
         width: 100%;
+        margin: 1em 0 ;
+        padding-left: 1em;
     }
 
     .content__header-int1,
@@ -634,6 +638,8 @@
     .content__phone-header {
         font-size: 0.8em;
         width: 100%;
+        margin: 1em 0 ;
+        padding-left: 1em;
     }
 
     .content__header-int1,
@@ -669,6 +675,8 @@
     .content__phone-header {
         font-size: 0.8em;
         width: 100%;
+        margin: 1em 0 ;
+        padding-left: 1em;
     }
 
     .content__header-int1,
